--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>EROS</title>
+  <title>weex-saoa开发文档</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -14,7 +14,7 @@
 </head>
 <body>
   <nav>
-    <a href="#/en-us/">EN</a>
+    <a href="#">EN</a>
     <a href="#/zh-cn/">中文</a>
   </nav>
    <div data-app id="main">Please wait...</div>
