--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       },
       loadNavbar: true,
       loadSidebar: true,
-      name: 'weex-saoa开发文档',
+      name: 'WEEX-SAOA开发文档',
       repo: '',
       coverpage: true,
       auto2top: true,
